[package]
name = "rustls-ffi"
version = "0.11.1"
authors = ["Jacob Hoffman-Andrews <github@hoffman-andrews.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README-crates.io.md"
description = "Rustls bindings for non-Rust languages"
homepage = "https://github.com/rustls/rustls-ffi"
repository = "https://github.com/rustls/rustls-ffi"
categories = ["network-programming", "cryptography"]
edition = "2021"
links = "rustls_ffi"
rust-version = "1.61"

[features]
default = ["ring"]
# Enable this feature when building as Rust dependency. It inhibits the
# default behavior of capturing the global logger, which only works when
# built using the Makefile, which passes -C metadata=rustls-ffi to avoid
# interfering with copies of the global logger brought in by other Rust
# libraries.
no_log_capture = []
read_buf = ["rustls/read_buf"]
ring = ["rustls/ring", "webpki/ring"]
aws_lc_rs = ["rustls/aws_lc_rs", "webpki/aws_lc_rs"]

[dependencies]
# Keep in sync with RUSTLS_CRATE_VERSION in build.rs
rustls = { version = "0.22", default-features = false, features = ["tls12"]}
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
webpki = { package = "rustls-webpki", version = "0.102.0", default-features = false, features = ["std"] }
libc = "0.2"
sct = "0.7"
rustls-pemfile = "2"
log = "0.4.17"

[lib]
name = "rustls_ffi"
crate-type = ["lib", "staticlib"]

[dev-dependencies]
regex = "1.9.6"

[patch.crates-io]
# TODO(cpu): Remove once 0.22 stablized.
rustls = { git = "https://github.com/rustls/rustls", rev = "258c79edb056b5613333c6c6a516cae1b7a7fc36" }
